--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
     <title><img src="" alt="">Js Calculator</title>
   </head>
   <body>
-    <header>
-      <div>
-        <h1>
-          Calculator
-        </h1>
-      </div>
+    <header class="bg-warning">
+          <h1 class="display-4 text-center text-monospace">
+            Calculator
+          </h1>
     </header>
+
+    <section class="bg-dark">
+      <div class="bg-white">
+
+      </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
